Added poker hand compare functionallity